--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@tanstack/react-query": "^5.74.4",
     "next": "15.3.1",
     "react": "^19.0.0",
